// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateComponent Snapshots has custom input format 1`] = `
<DayPickerInput
  classNames={
    Object {
      "container": "objectlist-input__container",
      "overlay": "",
      "overlayWrapper": "objectlist-input__daypicker",
    }
  }
  clickUnselectsDay={true}
  dayPickerProps={
    Object {
      "fixedWeeks": true,
    }
  }
  format="DD/MM/YYYY"
  formatDate={[Function]}
  onDayChange={[Function]}
  parseDate={[Function]}
  placeholder="23rd Apr 18"
  value="Mon Apr 23 2018 09:34:07 GMT+1000 (AEST)"
/>
`;

exports[`DateComponent Snapshots has custom relative date options 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  clearable={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "Right now",
        "value": "now",
      },
      Object {
        "label": "A bit later",
        "value": "later",
      },
      Object {
        "label": "Never ever",
        "value": "never",
      },
    ]
  }
  value="Mon Apr 23 2018 09:34:07 GMT+1000 (AEST)"
/>
`;

exports[`DateComponent Snapshots has null value 1`] = `
<DayPickerInput
  classNames={
    Object {
      "container": "objectlist-input__container",
      "overlay": "",
      "overlayWrapper": "objectlist-input__daypicker",
    }
  }
  clickUnselectsDay={true}
  dayPickerProps={
    Object {
      "fixedWeeks": true,
    }
  }
  format="DD/MM/YYYY"
  formatDate={[Function]}
  onDayChange={[Function]}
  parseDate={[Function]}
  placeholder=""
/>
`;

exports[`DateComponent Snapshots renders default 1`] = `
<DayPickerInput
  classNames={
    Object {
      "container": "objectlist-input__container",
      "overlay": "",
      "overlayWrapper": "objectlist-input__daypicker",
    }
  }
  clickUnselectsDay={true}
  dayPickerProps={
    Object {
      "fixedWeeks": true,
    }
  }
  format="DD/MM/YYYY"
  formatDate={[Function]}
  onDayChange={[Function]}
  parseDate={[Function]}
  placeholder="23/04/2018"
  value="Mon Apr 23 2018 09:34:07 GMT+1000 (AEST)"
/>
`;

exports[`DateComponent Snapshots renders with relative comparison 1`] = `
<Select
  className="objectlist-current-filter__active-status"
  clearable={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "Today",
        "value": "today",
      },
      Object {
        "label": "Beginning of this week",
        "value": "week_start",
      },
      Object {
        "label": "Beginning of this month",
        "value": "month_start",
      },
      Object {
        "label": "Beginning of this year",
        "value": "year_start",
      },
    ]
  }
  value="Mon Apr 23 2018 09:34:07 GMT+1000 (AEST)"
/>
`;
